test/functions/diten/unary_uint64_param_minus.chpl
param x: uint(64) = 5;

var y: int(64) = -x;
writeln(y);
